# SCA3504

./: CMakeLists.txt  app.overlay  prj.conf  sca3504.overlay  usb_2.overlay
boards/arm/cra3504/: Kconfig.board  Kconfig.defconfig  cra3504.dts  cra3504.yaml  cra3504_defconfig
src/: Bluettoth_main.c  bluetooth.c  commandUsb.c  commandUsb.h  ledPwm.c  ledPwm.h  main.c  modbus.c  moteur.c  moteur.h  myDefine.h  nvs.c  usb.c  usb_sav.c
